--- a/test-demos/test-b/src/main/resources/application.properties
+++ b/test-demos/test-b/src/main/resources/application.properties
@@ -6,17 +6,8 @@ info.contact= xhg-transaction-producer
 spring.application.name=server-b
 #mq基本配置
 spring.extend.mq.serverAddr=192.168.147.166:9876
-#spring.extend.mq.serverAddr=172.31.0.90:9876;172.31.0.92:9876;172.31.0.95:9876;172.31.0.96:9876
-#spring.extend.mq.serverAddr=172.31.0.89:9876;172.31.0.90:9876;172.31.0.93:9876;172.31.0.94:9876
 spring.extend.mq.instanceName=${spring.application.name}
-#spring.extend.mq.topic=TopicTest1
-##spring.extend.mq.subscribe=TopicA:addUser
-#spring.extend.mq.subscribe=TopicA:addUser||testA,TopicC
 ##默认都false 关闭
 spring.extend.mq.producer.enable=true
 spring.extend.mq.consumer.enable=true
-testTop=xxxxfyyyy
-
-topicBPre=aaaaa
-subs=xxxxxx
-consumer=cccss
+app.env.prefix=
