--- a/test-demos/test-a/src/main/resources/application.properties
+++ b/test-demos/test-a/src/main/resources/application.properties
@@ -3,73 +3,11 @@ server.port=8982
 info.name= 事件生产端
 info.contact= xhg-transaction-producer
 
-vjia.pre=vjiahaha-
-spring.application.name=${vjia.pre}xhg-transaction-producer
+spring.application.name=xhg-transaction-producer
 #mq基本配置
 #spring.extend.mq.serverAddr=10.10.13.144:9876
 spring.extend.mq.serverAddr=10.10.10.227:9876
-#spring.extend.mq.serverAddr=10.10.10.218:9876;10.10.10.219:9876
-#spring.extend.mq.serverAddr=10.10.10.210:9876;10.10.10.211:9876
 spring.extend.mq.instanceName=${spring.application.name}
-#spring.extend.mq.topic=TopicA
-##spring.extend.mq.subscribe=TopicA:addUser
-#spring.extend.mq.subscribe=TopicA:addUser||testA,xhg-device-service-topic:DeviceEvent
 ##默认都开启
 spring.extend.mq.producer.enable=true
 spring.extend.mq.consumer.enable=true
-spring.extend.mq.consumerRetryCount=6
-
-# jdbc_config   datasource
-spring.datasource.url=jdbc:mysql://10.10.10.207:3306/recycledb_dev?characterEncoding=utf8&serverTimezone=Asia/Shanghai
-spring.datasource.username=dev
-spring.datasource.password=DEVuser2018#
-spring.datasource.driver-class-name= com.mysql.jdbc.Driver
-#spring.datasource.type= com.alibaba.druid.pool.DruidDataSource
-
-#druid_config
-spring.datasource.max-active= 20
-spring.datasource.initial-size= 1
-spring.datasource.min-idle= 3
-spring.datasource.max-wait= 60000
-spring.datasource.time-between-eviction-runs-millis= 60000
-spring.datasource.min-evictable-idle-time-millis= 300000
-spring.datasource.test-while-idle= true
-spring.datasource.test-on-borrow= false
-spring.datasource.test-on-return= false
-spring.datasource.poolPreparedStatements= true
-spring.datasource.filters= stat,wall,slf4j
-
-#redis
-spring.redis.cluster.nodes= 10.10.10.235:6379,10.10.10.235:6380,10.10.10.235:6381,10.10.10.234:6379,10.10.10.234:6380,10.10.10.234:6381
-spring.redis.timeout= 5000
-# 禁用redis健康检查
-management.health.redis.enabled=false
-#logging.level.root=debug
-
-# mybatis_config
-#mybatis.mapper-locations= classpath*:com/xhg/**/mapping/*.xml
-
-#app.env.prefix=envpre-
-spring.extend.mq.schedule.cron=0 0/10 * * * *
-#spring.extend.mq.schedule.cron=0/20 * * * * *
-#spring.extend.mq.schedule.cron=0 0/1 * * * ?
-#redis.cron=0 0/1 * * * ?
-
-
-##  fail send/consume msg cron
-#fail.msg.resend.cron=0 0/5 * * * ?
-#fail.msg.resend.cron=0 0/1 * * * ?
-#fail.msg.resend.cron=0 0/2 * * * ?
-
-
-############
-#mq.fail.redis.maxRetryTimes=10
-#mq.fail.redis.firstLevelKeyConsumeFailSuffix=-msg-consume-fail
-#mq.fail.redis.ConsumeFailFirstLevelKey=${spring.application.name}${mq.fail.redis.firstLevelKeyConsumeFailSuffix}
-#normal.message.max.retrytimes=10
-
-
-spring.extend.mq.sendRetryMaxTimes=5
-
-
-vjia.1024.times=2
