--- a/test-demos/test-b/src/main/resources/application.properties
+++ b/test-demos/test-b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port:8982
+server.port=8982
 
 info.name= 事件生产端
 info.contact= xhg-transaction-producer
@@ -10,4 +10,4 @@ spring.extend.mq.instanceName=${spring.application.name}
 ##默认都false 关闭
 spring.extend.mq.producer.enable=true
 spring.extend.mq.consumer.enable=true
-app.env.prefix=
+app.env.prefix=dev-
