--- a/test-demos/test-b/src/main/resources/application.properties
+++ b/test-demos/test-b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ info.contact= xhg-transaction-producer
 
 spring.application.name=server-b
 #mq基本配置
-spring.extend.mq.serverAddr=192.168.147.166:9876
+spring.extend.mq.serverAddr=127.0.0.1:9876
 spring.extend.mq.instanceName=${spring.application.name}
 ##默认都false 关闭
 spring.extend.mq.producer.enable=true
 spring.extend.mq.consumer.enable=true
-app.env.prefix=dev-
+app.env.prefix=dev_
